--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,17 @@
-<p>big-card works!</p>
+<div class="container__big-card">
+    <div class="big-card__picture">
+        <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" 
+        alt="" 
+        height="200px"
+        width="300px"
+        srcset="">
+    </div>
+    <div class="big-card__title">
+        <h1>Saiu a nova versão do angular!</h1>
+    </div>
+    <div class="big-card__description">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Ut enim ad minim veniam, quis nostrud exercitation 
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+</div>
