Concentrando o Big card

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -6,11 +6,12 @@
         srcset="">
     </div>
     <div class="big-card__title">
-        <h1>Saiu a nova versão do angular!</h1>
+        <h1><a href="#">Saiu a nova versão do angular!</a></h1>
     </div>
     <div class="big-card__description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        <p><a href="#">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation 
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.</a></p>
     </div>
 </div>
