Desenhando small cards

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,5 +1,5 @@
 <div class="container__big-card">
-    <div class="big-card__picture">
+    <div class="big-card__photo">
         <img src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder.png" 
         alt="" 
         height="200px"
