--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,9 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul>
+        <li><a href="https://br.linkedin.com/in/rauldionisio">Linkedin</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://github.com/RaulDionisiodev">Github</a></li>
+        <li><span>•</span></li>
+        <li><a href="https://www.youtube.com/@MatrixMentoria">Youtube</a></li>
+    </ul>
+</div>
