--- a/src/app/pages/content/content.component.css
+++ b/src/app/pages/content/content.component.css
@@ -1,5 +1,4 @@
 .container__content {
-    border: 1px solid white;
     width: 100%;
     height: 100vh;
     display: flex;
@@ -21,5 +20,6 @@
 }
 
 .content__description > p {
+    margin-top: 20px;
     color: rgb(195, 193, 193);
 }
